@@ -18,6 +18,7 @@ proc gas_64_check { } {
 
 if [istarget sparc*-*-*] {
     run_dump_test "synth"
+    run_dump_test "unalign"
     if [gas_64_check] {
 	run_dump_test "asi"
 	run_dump_test "membar"
