@@ -1,3 +1,12 @@
+2001-05-28  Jeff Sturm  <jsturm@one-point.com>
+
+	* config/tc-sparc.c (md_apply_fix3): Handle BFD_RELOC_SPARC_UA16,
+	BFD_RELOC_SPARC_UA32 and BFD_RELOC_SPARC_UA64.
+	(tc_gen_reloc): Likewise.
+	(sparc_cons_align): Don't clear sparc_no_align_cons.
+	(cons_fix_new_sparc): Substitute BFD_RELOC_SPARC_UA{16|32|64} for 
+	BFD_RELOC_{16|32|64} iff sparc_no_align_cons is set.
+
 2001-05-23  Alan Modra  <amodra@one.net.au>
 
 	Merge from mainline.
