@@ -1,3 +1,12 @@
+2001-05-28  Jeff Sturm  <jsturm@one-point.com>
+
+	* reloc.c: Add BFD_RELOC_SPARC_UA16 and BFD_RELOC_SPARC_UA64.
+	* bfd-in2.h: Regenerate.
+	* libbfd.h: Regenerate.
+	* elf32-sparc.c: Enable BFD_RELOC_SPARC_UA16, BFD_RELOC_SPARC_UA32
+	and BFD_RELOC_SPARC_UA64 mapping
+	* elf64-sparc.c: Likewise.
+	
 2001-05-23  Alan Modra  <amodra@one.net.au>
 
 	Merge from mainline.
